--- a/VNCVisioTools/VNCVisioTools/VNCVisioTools.csproj
+++ b/VNCVisioTools/VNCVisioTools/VNCVisioTools.csproj
@@ -247,19 +247,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Build.Tasks.Core">
-      <Version>17.14.8</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens">
-      <Version>8.14.0</Version>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>13.0.3</Version>
-    </PackageReference>
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt">
-      <Version>8.14.0</Version>
-    </PackageReference>
     <PackageReference Include="VNC.Core">
+      <Version>3.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="VNC.Logging">
       <Version>3.2.0</Version>
     </PackageReference>
     <PackageReference Include="VNC.VSTOAddIn">
