--- a/VNCVisioTools/VNCVisioToolsApplication.Core/VNCVisioToolsApplication.Core.csproj
+++ b/VNCVisioTools/VNCVisioToolsApplication.Core/VNCVisioToolsApplication.Core.csproj
@@ -49,7 +49,7 @@
 
     <PropertyGroup Condition="'$(Configuration)'=='Debug'">
       <!-- Uncoment next line to switch to ProjectReference(s) -->
-       <DefineConstants>$(DefineConstants);VNCPROJECTREF</DefineConstants> 
+       <!--<DefineConstants>$(DefineConstants);VNCPROJECTREF</DefineConstants>--> 
     </PropertyGroup>
 
     <Choose>
