--- a/VNCVisioTools/VNCVisioToolsApplication/VNCVisioToolsApplication.csproj
+++ b/VNCVisioTools/VNCVisioToolsApplication/VNCVisioToolsApplication.csproj
@@ -11,7 +11,7 @@
       <VersionPrefix>1.0.0</VersionPrefix>
       <VersionSuffix>Development</VersionSuffix>
       <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
-      <FileVersion>2025.08.15</FileVersion>
+      <FileVersion>2025.08.17</FileVersion>
       <Description>VNCVisioToolsApplication</Description>
       <LangVersion>12.0</LangVersion>
       <Nullable>enable</Nullable>
@@ -36,27 +36,6 @@
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <SatelliteResourceLanguages>en-US</SatelliteResourceLanguages>
     </PropertyGroup>    
-
-  <!--<ItemGroup>
-    <None Remove="Presentation\Views\About.xaml" />
-    <None Remove="Presentation\Views\AppVersionInfo.xaml" />
-    <None Remove="Presentation\Views\CommandCockpit.xaml" />
-    <None Remove="Presentation\Views\DuplicatePage.xaml" />
-    <None Remove="Presentation\Views\EditControlPoints.xaml" />
-    <None Remove="Presentation\Views\EditControlRows.xaml" />
-    <None Remove="Presentation\Views\EditParagraph.xaml" />
-    <None Remove="Presentation\Views\EditText.xaml" />
-    <None Remove="Presentation\Views\MovePage.xaml" />
-    <None Remove="Presentation\Views\PrismRegionTest.xaml" />
-    <None Remove="Presentation\Views\RenamePage.xaml" />
-    <None Remove="Presentation\Views\ViewA.xaml" />
-    <None Remove="Presentation\Views\ViewB.xaml" />
-    <None Remove="Presentation\Views\ViewC1.xaml" />
-    <None Remove="Presentation\Views\ViewC2.xaml" />
-    <None Remove="Resources\Xaml\Application.xaml" />
-    <None Remove="Resources\Xaml\Display_StylesAndTemplates.xaml" />
-    <None Remove="Resources\Xaml\Layout_Styles.xaml" />
-  </ItemGroup>-->
 
   <ItemGroup>
     <Content Include="Resources\Icons\VisioAddin.ico">
@@ -122,15 +101,15 @@
 
     <PropertyGroup Condition="'$(Configuration)'=='Debug'">
         <!-- Uncoment next line to switch to ProjectReference(s) -->
-         <DefineConstants>$(DefineConstants);VNCPROJECTREF</DefineConstants> 
+         <!--<DefineConstants>$(DefineConstants);VNCPROJECTREF</DefineConstants>--> 
     </PropertyGroup>
 
     <Choose>
         <When Condition="'$(DefineConstants.Contains(VNCPROJECTREF))'">
-            <ItemGroup>               
+            <ItemGroup>
                 <ProjectReference Include="..\..\VNC.Visio.VSTOAddin\VNC.Visio.VSTOAddIn.csproj" />
                 <ProjectReference Include="..\..\..\VNCDevelopment\VNC.WPF.Presentation\VNC.WPF.Presentation.csproj" />
-                <ProjectReference Include="..\..\..\VNCDevelopment\VNC.WPF.Presentation.Dx\VNC.WPF.Presentation.Dx.csproj" />                
+                <ProjectReference Include="..\..\..\VNCDevelopment\VNC.WPF.Presentation.Dx\VNC.WPF.Presentation.Dx.csproj" />
                 <!--<ProjectReference Include="..\..\VNC.VSTOAddin\VNC.VSTOAddIn.csproj" />-->
             </ItemGroup>
         </When>
