--- a/VNCVisioTools/VNCVisioToolsApplication/VNCVisioToolsApplication.csproj
+++ b/VNCVisioTools/VNCVisioToolsApplication/VNCVisioToolsApplication.csproj
@@ -11,11 +11,12 @@
       <VersionPrefix>1.0.0</VersionPrefix>
       <VersionSuffix>Development</VersionSuffix>
       <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
-      <FileVersion>2025.08.20</FileVersion>
+      <FileVersion>2026.02.11</FileVersion>
       <Description>VNCVisioToolsApplication</Description>
       <LangVersion>12.0</LangVersion>
       <Nullable>enable</Nullable>
       <ImplicitUsings>disable</ImplicitUsings>
+      <SatelliteResourceLanguages>en-US</SatelliteResourceLanguages>  
   </PropertyGroup>
 
     <!-- This is for NuGet Packages -->
@@ -80,9 +81,9 @@
     <PackageReference Include="CalcBinding" Version="2.5.2" />      
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
     <PackageReference Include="VNC.AZDO" Version="3.2.0" />
-    <!--<PackageReference Include="VNC.CodeAnalysis" Version="3.2.0" />-->   
-    <PackageReference Include="VNC.WPF.Presentation" Version="3.2.0" />
-    <PackageReference Include="VNC.WPF.Presentation.Dx" Version="3.2.0" />
+    <!--<PackageReference Include="VNC.CodeAnalysis" Version="3.3.0" />-->   
+    <PackageReference Include="VNC.WPF.Presentation" Version="3.3.0" />
+    <PackageReference Include="VNC.WPF.Presentation.Dx" Version="3.3.0" />
   </ItemGroup>
    
     <ItemGroup>
@@ -137,10 +138,14 @@
     <!-- </Choose> -->
 
     <!--This updates the file version to the current date.-->
-
-    <Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition="'$(Configuration)'=='Release'">
-        <Exec Command="powershell.exe -File &quot;$(ProjectDir)\Execute-PreBuild.ps1&quot; -Verbose $(ProjectFileName)" />
+    
+    <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+        <Exec Command="powershell.exe -File &quot;$(ProjectDir)\Execute-PreBuild.ps1&quot; $(ProjectFileName)" />
     </Target>
+
+    <!--<Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition="'$(Configuration)'=='Release'">
+        <Exec Command="powershell.exe -File &quot;$(ProjectDir)\Execute-PreBuild.ps1&quot; -Verbose $(ProjectFileName)" />
+    </Target>-->
 
     <!--<Target Name="PostBuild" AfterTargets="PostBuildEvent">
         <Exec Command="powershell.exe -File &quot;$(ProjectDir)\Execute-PostBuild.ps1&quot; -Verbose $(ProjectFileName)" />
